--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1 class="mt-5">Welcome to the Home Page</h1>
-    <div class="mt-3">
-        <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a>
-        <a href="{{ url_for('register') }}" class="btn btn-secondary">Register</a>
+    <div class="jumbotron mt-5">
+        <h1 class="display-4">Welcome to MyApp!</h1>
+        <p class="lead">This is a simple web application where you can manage users and messages.</p>
+        <hr class="my-4">
+        <p>To get started, please login or register if you don't have an account.</p>
+        <a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Login</a>
+        <a class="btn btn-secondary btn-lg" href="{{ url_for('register') }}" role="button">Register</a>
     </div>
-    <h2 class="mt-5">Messages</h2>
-    <ul class="list-group mt-3">
-        {% for message, username in messages %}
-            <li class="list-group-item">{{ message }} - <strong>{{ username }}</strong></li>
-        {% endfor %}
-    </ul>
 {% endblock %}
