--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,23 @@
     <title>{% block title %}Home{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .content {
+            flex: 1;
+        }
+
+        footer {
+            background: #f8f9fa;
+            padding: 10px 0;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -14,10 +31,24 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <form class="form-inline mx-auto" action="{{ url_for('search') }}" method="GET">
+            <ul class="navbar-nav mr-auto">
+                {% if 'username' in session %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main') }}">Main</a>
+                    </li>
+                    {% if session['role'] == 'admin' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin') }}">Yönetim</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+            </ul>
+            {% if 'username' in session %}
+            <form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}" method="GET">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            {% endif %}
             <ul class="navbar-nav ml-auto">
                 {% if 'username' in session %}
                     <li class="nav-item dropdown">
@@ -43,11 +74,12 @@
             </ul>
         </div>
     </nav>
-    <div class="container mt-4">
+    <div class="content container mt-4">
         {% block content %}
         {% endblock %}
     </div>
-    <footer class="bg-light text-center text-lg-start mt-5">
+
+    <footer class="bg-light text-center text-lg-start">
         <div class="container p-4">
             <p class="text-center">&copy; 2023 MyApp. All rights reserved.</p>
         </div>
