--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,6 +12,8 @@
             <div class="col-md-8">
                 <h1>{{ user_profile[1] }}</h1>
                 <p>Email: {{ user_profile[2] }}</p>
+                <p>Role: {{ user_profile[4] }}</p>
+                <p>Description: {{ user_profile[5] }}</p>
             </div>
         </div>
     </div>
