--- a/templates/register.html
+++ b/templates/register.html
@@ -18,6 +18,13 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" class="form-control">
         </div>
+        <div class="form-group">
+            <label for="role">Role:</label>
+            <select id="role" name="role" class="form-control">
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
     <div class="mt-3">
