--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,16 @@
             <ul class="navbar-nav ml-auto">
                 {% if 'username' in session %}
                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="notificationsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Notifications
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notificationsDropdown">
+                            {% for notification in notifications %}
+                                <a class="dropdown-item" href="#">{{ notification[2] }}</a>
+                            {% endfor %}
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img src="{{ url_for('static', filename='profile_pictures/' ~ session.get('profile_picture', 'default.png')) }}" class="rounded-circle" width="30" height="30" alt="Profile Picture">
                             <span class="ml-2">{{ session['username'] }}</span>
