--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,7 @@
                 <p>Email: {{ user_profile[2] }}</p>
                 <p>Role: {{ user_profile[4] }}</p>
                 <p>Description: {{ user_profile[5] }}</p>
+                <a href="{{ url_for('direct_messages_with_user', receiver_id=user_profile[0]) }}" class="btn btn-primary">Mesaj At</a>
             </div>
         </div>
     </div>
