--- a/templates/server.html
+++ b/templates/server.html
@@ -37,14 +37,19 @@
                 <div class="messages-container flex-grow-1" style="height: 600px; overflow-y: auto;">
                     <ul class="list-group h-100">
                         {% for message in messages %}
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <li class="list-group-item d-flex {% if message[2] == user_id %}justify-content-end{% else %}justify-content-start{% endif %} align-items-center">
                                 <div class="d-flex align-items-center">
-                                    <img src="{{ url_for('static', filename='profile_pictures/' ~ (message[3] if message[3] else 'default.png')) }}" class="rounded-circle mr-2" width="30" height="30" alt="Profile Picture">
+                                    {% if message[2] != user_id %}
+                                        <img src="{{ url_for('static', filename='profile_pictures/' ~ (message[3] if message[3] else 'default.png')) }}" class="rounded-circle mr-2" width="30" height="30" alt="Profile Picture">
+                                    {% endif %}
                                     <span class="ml-2"><strong>{{ message[1] }}</strong></span>
                                     <span class="ml-2">{{ message[0] }}</span>
+                                    {% if message[2] == user_id %}
+                                        <img src="{{ url_for('static', filename='profile_pictures/' ~ (message[3] if message[3] else 'default.png')) }}" class="rounded-circle ml-2" width="30" height="30" alt="Profile Picture">
+                                    {% endif %}
                                 </div>
-                                {% if session['role'] == 'admin' %}
-                                    <form method="post" action="{{ url_for('delete_message_route') }}" class="d-inline">
+                                {% if session['role'] == 'admin' or message[2] == user_id %}
+                                    <form method="post" action="{{ url_for('delete_message_route') }}" class="d-inline ml-2">
                                         <input type="hidden" name="message_id" value="{{ message[4] }}">
                                         <input type="hidden" name="server_id" value="{{ server_id }}">
                                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
