--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,15 @@
                 <p>Email: {{ user_profile[2] }}</p>
                 <p>Role: {{ user_profile[4] }}</p>
                 <p>Description: {{ user_profile[5] }}</p>
+                <p>Followers: {{ followers_count }}</p>
+                <form method="post" action="{{ url_for('follow', user_id=user_profile[0]) }}">
+                    <input type="hidden" name="username" value="{{ user_profile[1] }}">
+                    <button type="submit" class="btn btn-primary">Follow</button>
+                </form>
+                <form method="post" action="{{ url_for('unfollow', user_id=user_profile[0]) }}">
+                    <input type="hidden" name="username" value="{{ user_profile[1] }}">
+                    <button type="submit" class="btn btn-secondary">Unfollow</button>
+                </form>
                 <a href="{{ url_for('direct_messages_with_user', receiver_id=user_profile[0]) }}" class="btn btn-primary">Mesaj At</a>
             </div>
         </div>
