--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,9 @@
                             <a class="nav-link" href="{{ url_for('admin') }}">Yönetim</a>
                         </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('saved_messages') }}">Saved Messages</a>
+                    </li>
                 {% endif %}
             </ul>
             {% if 'username' in session %}
