--- a/templates/server.html
+++ b/templates/server.html
@@ -48,6 +48,10 @@
                                         <img src="{{ url_for('static', filename='profile_pictures/' ~ (message[3] if message[3] else 'default.png')) }}" class="rounded-circle ml-2" width="30" height="30" alt="Profile Picture">
                                     {% endif %}
                                 </div>
+                                <form method="post" action="{{ url_for('save_message_route') }}" class="d-inline ml-2">
+                                    <input type="hidden" name="message_id" value="{{ message[4] }}">
+                                    <button type="submit" class="btn btn-secondary btn-sm">Save</button>
+                                </form>
                                 {% if session['role'] == 'admin' or message[2] == user_id %}
                                     <form method="post" action="{{ url_for('delete_message_route') }}" class="d-inline ml-2">
                                         <input type="hidden" name="message_id" value="{{ message[4] }}">
